# luadec51

./: CMakeLists.txt
.github/workflows/: build-universal.yml
lua/: README
lua/src/: CMakeLists.txt
luadec/: CMakeLists.txt  guess.c  luadec.c  luadec.h
